--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,53 +4,87 @@ availableSecrets:
       env: 'GEMINI_API_KEY'
 
 steps:
-  # Build frontend image and push to Artifact Registry
+  # Build and push frontend image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-f', 'frontend/Dockerfile', '-t', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA']
 
-  # Build backend image and push
+  # Sign frontend image with cosign using KMS
+  - name: 'gcr.io/projectsigstore/cosign/cosign:v1.14.1'
+    entrypoint: '/usr/bin/cosign'
+    args:
+      - 'sign'
+      - '--key'
+      - '${_COSIGN_KMS_URI}'
+      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA'
+
+  - name: 'gcr.io/projectsigstore/cosign/cosign:v1.14.1'
+    entrypoint: '/usr/bin/cosign'
+    args:
+      - 'verify'
+      - '--key'
+      - '${_COSIGN_KMS_URI}'
+      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA'
+
+  # Build and push backend image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-f', 'backend/Dockerfile', '-t', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA']
 
+  # Sign images with cosign using a KMS-backed key (requires KMS key and IAM permissions)
+  - name: 'gcr.io/projectsigstore/cosign/cosign:v1.14.1'
+    entrypoint: '/usr/bin/cosign'
+    args:
+      - 'sign'
+      - '--key'
+      - '${_COSIGN_KMS_URI}'
+      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA'
+
+  - name: 'gcr.io/projectsigstore/cosign/cosign:v1.14.1'
+    entrypoint: '/usr/bin/cosign'
+    args:
+      - 'verify'
+      - '--key'
+      - '${_COSIGN_KMS_URI}'
+      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA'
+
+  # Generate SBOM for backend image (non-fatal)
+  - name: 'anchore/syft:latest'
+    entrypoint: '/bin/sh'
+    args:
+      - '-c'
+      - 'syft ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA -o json > backend-sbom-${SHORT_SHA}.json || true'
+
   # Deploy frontend to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: 'gcloud'
+    entrypoint: 'bash'
     args:
-      - 'run'
-      - 'deploy'
-      - '${_FRONTEND_SERVICE}'
-      - '--image'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA'
-      - '--region'
-      - '${_REGION}'
-      - '--platform'
-      - 'managed'
-      - '--service-account'
-      - '${_DEPLOYER_SA_EMAIL}'
-      - '--allow-unauthenticated'
+      - '-c'
+      - |
+        gcloud run deploy ${_FRONTEND_SERVICE} \
+          --image ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA \
+          --region ${_REGION} \
+          --platform managed \
+          --service-account ${_DEPLOYER_SA_EMAIL} \
+          --allow-unauthenticated
 
-  # Deploy backend to Cloud Run
+  # Deploy backend to Cloud Run with secret injection from Secret Manager
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: 'gcloud'
+    entrypoint: 'bash'
     args:
-      - 'run'
-      - 'deploy'
-      - '${_BACKEND_SERVICE}'
-      - '--image'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA'
-      - '--region'
-      - '${_REGION}'
-      - '--platform'
-      - 'managed'
-      - '--service-account'
-      - '${_DEPLOYER_SA_EMAIL}'
-      - '--allow-unauthenticated'
+      - '-c'
+      - |
+        gcloud run deploy ${_BACKEND_SERVICE} \
+          --image ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA \
+          --region ${_REGION} \
+          --platform managed \
+          --service-account ${_DEPLOYER_SA_EMAIL} \
+          --allow-unauthenticated \
+          --set-secrets=GEMINI_API_KEY=projects/$PROJECT_ID/secrets/GEMINI_API_KEY:latest
 
 substitutions:
   _AR_REPO: 'family-weather-wardrobe-repo'
@@ -58,30 +92,9 @@ substitutions:
   _FRONTEND_SERVICE: 'family-weather-wardrobe-frontend'
   _BACKEND_SERVICE: 'family-weather-wardrobe-backend'
   _DEPLOYER_SA_EMAIL: 'cloud-run-deployer-sa@${PROJECT_ID}.iam.gserviceaccount.com'
+  _COSIGN_KMS_URI: 'gcpkms://projects/$PROJECT_ID/locations/$KMS_LOCATION/keyRings/$KEY_RING/cryptoKeys/$COSIGN_KEY'
 
 timeout: '1200s'
 
 options:
   logging: CLOUD_LOGGING_ONLY
-steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA', '.']
-
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA']
-
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: 'gcloud'
-    args: [
-      'run', 'deploy', '${_SERVICE_NAME}',
-      '--image', 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA',
-      '--platform', 'managed',
-      '--region', '${_REGION}',
-      '--allow-unauthenticated'
-    ]
-
-substitutions:
-  _SERVICE_NAME: 'family-weather-wardrobe'
-  _REGION: 'us-central1'
-
-timeout: '1200s'
