--- a/package.json
+++ b/package.json
@@ -6,14 +6,30 @@
     "dev": "vite",
     "start": "vite",
     "preview": "vite preview --port 3000",
-    "build": "node build.mjs"
+    "build": "node build.mjs",
+    "test": "jest --passWithNoTests",
+    "lint": "echo \"No linter configured\" && exit 0"
   },
   "dependencies": {
     "@google/genai": "^1.28.0"
+    ,"focus-trap-react": "^9.0.2"
   },
   "devDependencies": {
     "@google-cloud/functions-framework": "^3.3.0",
     "@types/express": "^4.17.21",
-    "esbuild": "^0.23.0"
+    "esbuild": "^0.23.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.0",
+    "@types/jest": "^29.5.0",
+    "cross-fetch": "^3.1.5",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "jest-environment-jsdom": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.12",
+    "cors": "^2.8.5",
+    "eslint": "^8.56.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0"
   }
 }
