cleaned code from security perspective

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ dist
 dist-ssr
 *.local
 
+# Environment variables and secrets
+.env
+.env.*
+!.env.example
+*.key
+*.key.json
+secrets/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
