--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -16,16 +16,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Cloud SDK
+      - name: Authenticate to Google Cloud using Workload Identity Federation
+        uses: google-github-actions/auth@v1
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.GCP_SA }}
+
+      - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v1
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT }}
+          export_default_credentials: true
 
-      - name: Build and push image to Artifact Registry
-        run: |
-          gcloud builds submit --config=cloudbuild.yaml --substitutions=_FRONTEND_SERVICE=${{ env.FRONTEND_SERVICE }},_BACKEND_SERVICE=${{ env.BACKEND_SERVICE }},_AR_REPO=${{ env.AR_REPO }}
+      - name: Build and push image to Artifact Registry & deploy
         env:
           FRONTEND_SERVICE: family-weather-wardrobe-frontend
           BACKEND_SERVICE: family-weather-wardrobe-backend
-          AR_REPO: family-weather-wardrobe-repo
+          ARTIFACT_REGISTRY_REPO: ${{ secrets.ARTIFACT_REGISTRY_REPO }}
+          REGION: ${{ secrets.GCP_REGION }}
+        run: |
+          gcloud builds submit --config=cloudbuild.yaml --substitutions=_FRONTEND_SERVICE=${FRONTEND_SERVICE},_BACKEND_SERVICE=${BACKEND_SERVICE},_AR_REPO=${ARTIFACT_REGISTRY_REPO},_REGION=${REGION}
