--- a/.github/workflows/oidc-deploy.yml
+++ b/.github/workflows/oidc-deploy.yml
@@ -24,10 +24,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Authenticate to Google Cloud using Workload Identity Federation
-        uses: 'google-github-actions/auth@v1'
+        uses: google-github-actions/auth@v1
         with:
-          workload_identity_provider: 'projects/${{ secrets.GCP_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
-          service_account: 'cloud-run-deployer-sa@${{ secrets.GCP_PROJECT }}.iam.gserviceaccount.com'
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.GCP_SA }}
 
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v1
