--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,100 +1,68 @@
-availableSecrets:
-  secretManager:
-    - versionName: "projects/$PROJECT_ID/secrets/GEMINI_API_KEY/versions/latest"
-      env: 'GEMINI_API_KEY'
+options:
+  substitutionOption: ALLOW_LOOSE
+
+substitutions:
+  _REGION: 'us-central1'
+  _AR_REPO: 'family-weather-wardrobe-repo'
+  _FRONTEND_SERVICE: 'family-weather-wardrobe-frontend'
+  _BACKEND_SERVICE: 'family-weather-wardrobe-backend'
+  _DEPLOYER_SA_EMAIL: 'cloud-run-deployer-sa@${PROJECT_ID}.iam.gserviceaccount.com'
 
 steps:
-  # Build and push frontend image to Artifact Registry
+  # Build backend image and push to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-f', 'frontend/Dockerfile', '-t', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA', '.']
-
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA']
-
-  # Sign frontend image with cosign using KMS
-  - name: 'gcr.io/projectsigstore/cosign/cosign:v1.14.1'
-    entrypoint: '/usr/bin/cosign'
-    args:
-      - 'sign'
-      - '--key'
-      - '${_COSIGN_KMS_URI}'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA'
-
-  - name: 'gcr.io/projectsigstore/cosign/cosign:v1.14.1'
-    entrypoint: '/usr/bin/cosign'
-    args:
-      - 'verify'
-      - '--key'
-      - '${_COSIGN_KMS_URI}'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA'
-
-  # Build and push backend image to Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-f', 'backend/Dockerfile', '-t', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA', '.']
+    args: ['build', '-f', 'backend/Dockerfile', '-t', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:${SHORT_SHA}', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA']
+    args: ['push', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:${SHORT_SHA}']
 
-  # Sign images with cosign using a KMS-backed key (requires KMS key and IAM permissions)
-  - name: 'gcr.io/projectsigstore/cosign/cosign:v1.14.1'
-    entrypoint: '/usr/bin/cosign'
-    args:
-      - 'sign'
-      - '--key'
-      - '${_COSIGN_KMS_URI}'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA'
+  # Build frontend image and push to Artifact Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-f', 'frontend/Dockerfile', '-t', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:${SHORT_SHA}', '.']
 
-  - name: 'gcr.io/projectsigstore/cosign/cosign:v1.14.1'
-    entrypoint: '/usr/bin/cosign'
-    args:
-      - 'verify'
-      - '--key'
-      - '${_COSIGN_KMS_URI}'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA'
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:${SHORT_SHA}']
 
-  # Generate SBOM for backend image (non-fatal)
-  - name: 'anchore/syft:latest'
-    entrypoint: '/bin/sh'
-    args:
-      - '-c'
-      - 'syft ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA -o json > backend-sbom-${SHORT_SHA}.json || true'
-
-  # Deploy frontend to Cloud Run
+  # Deploy frontend to Cloud Run (public)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         gcloud run deploy ${_FRONTEND_SERVICE} \
-          --image ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:$SHORT_SHA \
+          --image ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:${SHORT_SHA} \
           --region ${_REGION} \
           --platform managed \
           --service-account ${_DEPLOYER_SA_EMAIL} \
           --allow-unauthenticated
 
-  # Deploy backend to Cloud Run with secret injection from Secret Manager
+  # Deploy backend to Cloud Run (public) and optionally inject secrets
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        gcloud run deploy ${_BACKEND_SERVICE} \
-          --image ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:$SHORT_SHA \
-          --region ${_REGION} \
-          --platform managed \
-          --service-account ${_DEPLOYER_SA_EMAIL} \
-          --allow-unauthenticated \
-          --set-secrets=GEMINI_API_KEY=projects/$PROJECT_ID/secrets/GEMINI_API_KEY:latest
+        # If you use Secret Manager to inject GEMINI_API_KEY, add the --set-secrets flag via substitution
+        if [ -n "${_GEMINI_SECRET}" ]; then
+          gcloud run deploy ${_BACKEND_SERVICE} \
+            --image ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:${SHORT_SHA} \
+            --region ${_REGION} \
+            --platform managed \
+            --service-account ${_DEPLOYER_SA_EMAIL} \
+            --allow-unauthenticated \
+            --set-secrets=GEMINI_API_KEY=projects/$PROJECT_ID/secrets/${_GEMINI_SECRET}:latest
+        else
+          gcloud run deploy ${_BACKEND_SERVICE} \
+            --image ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:${SHORT_SHA} \
+            --region ${_REGION} \
+            --platform managed \
+            --service-account ${_DEPLOYER_SA_EMAIL} \
+            --allow-unauthenticated
+        fi
 
-substitutions:
-  _AR_REPO: 'family-weather-wardrobe-repo'
-  _REGION: 'us-central1'
-  _FRONTEND_SERVICE: 'family-weather-wardrobe-frontend'
-  _BACKEND_SERVICE: 'family-weather-wardrobe-backend'
-  _DEPLOYER_SA_EMAIL: 'cloud-run-deployer-sa@${PROJECT_ID}.iam.gserviceaccount.com'
-  _COSIGN_KMS_URI: 'gcpkms://projects/$PROJECT_ID/locations/$KMS_LOCATION/keyRings/$KEY_RING/cryptoKeys/$COSIGN_KEY'
+images:
+  - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/backend:${SHORT_SHA}'
+  - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/frontend:${SHORT_SHA}'
 
 timeout: '1200s'
 
-options:
-  logging: CLOUD_LOGGING_ONLY
