--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -9,6 +9,8 @@ jobs:
     name: Build images and deploy to Cloud Run
     runs-on: ubuntu-latest
     environment: production
+    # Only run if GCP secrets are configured
+    if: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER != '' && secrets.GCP_SA != '' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
