--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -9,14 +9,25 @@ jobs:
     name: Build images and deploy to Cloud Run
     runs-on: ubuntu-latest
     environment: production
-    # Only run if GCP secrets are configured
-    if: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER != '' && secrets.GCP_SA != '' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Check if GCP secrets are configured
+        id: check_secrets
+        run: |
+          if [ -z "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}" ] || [ -z "${{ secrets.GCP_SA }}" ]; then
+            echo "configured=false" >> $GITHUB_OUTPUT
+            echo "⚠️ GCP secrets not configured. Skipping deployment."
+            echo "To enable deployment, configure the required secrets in repository settings."
+          else
+            echo "configured=true" >> $GITHUB_OUTPUT
+            echo "✅ GCP secrets configured. Proceeding with deployment."
+          fi
+
       # Authenticate to GCP using Workload Identity Federation (no service account keys stored in repo)
       - name: Authenticate to Google Cloud
+        if: steps.check_secrets.outputs.configured == 'true'
         uses: google-github-actions/auth@v1
         with:
           # Set this repo secret to the full provider resource string, e.g.
@@ -26,18 +37,21 @@ jobs:
           service_account: ${{ secrets.GCP_SA }}
 
       - name: Setup gcloud CLI
+        if: steps.check_secrets.outputs.configured == 'true'
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT }}
           export_default_credentials: true
 
       - name: Configure Docker for Artifact Registry
+        if: steps.check_secrets.outputs.configured == 'true'
         run: |
           REGION=${{ secrets.GCP_REGION }}
           gcloud auth configure-docker "${REGION}-docker.pkg.dev" --quiet
 
       - id: build_backend
         name: Build & push backend image
+        if: steps.check_secrets.outputs.configured == 'true'
         env:
           PROJECT: ${{ secrets.GCP_PROJECT }}
           REGION: ${{ secrets.GCP_REGION }}
@@ -51,6 +65,7 @@ jobs:
 
       - id: build_frontend
         name: Build & push frontend image
+        if: steps.check_secrets.outputs.configured == 'true'
         env:
           PROJECT: ${{ secrets.GCP_PROJECT }}
           REGION: ${{ secrets.GCP_REGION }}
@@ -64,6 +79,7 @@ jobs:
           echo "image=${IMAGE_FRONTEND}" >> $GITHUB_OUTPUT
 
       - name: Deploy backend to Cloud Run
+        if: steps.check_secrets.outputs.configured == 'true'
         env:
           IMAGE_BACKEND: ${{ steps.build_backend.outputs.image }}
           REGION: ${{ secrets.GCP_REGION }}
@@ -78,6 +94,7 @@ jobs:
             --service-account ${{ secrets.CLOUD_RUN_SA }}
 
       - name: Deploy frontend to Cloud Run
+        if: steps.check_secrets.outputs.configured == 'true'
         env:
           IMAGE_FRONTEND: ${{ steps.build_frontend.outputs.image }}
           REGION: ${{ secrets.GCP_REGION }}
@@ -92,6 +109,7 @@ jobs:
             --service-account ${{ secrets.CLOUD_RUN_SA }}
 
       - name: Output deploy URLs
+        if: steps.check_secrets.outputs.configured == 'true'
         run: |
           echo "Backend URL: $(gcloud run services describe backend-service --region ${{ secrets.GCP_REGION }} --platform managed --format='value(status.url)')"
           echo "Frontend URL: $(gcloud run services describe frontend-service --region ${{ secrets.GCP_REGION }} --platform managed --format='value(status.url)')"
