--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@google/genai": "^1.28.0",
-    "express": "^4.18.2",
+    "@google-cloud/vertexai": "^1.10.0",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "winston": "^3.9.0",
-    "zod": "^3.22.4",
-    "express-rate-limit": "^6.7.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
