feat(frontend): hashed bundle with SRI and immutable caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,4 +17,19 @@ server {
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
+
+    # Hashed bundles: allow long-lived immutable caching (hash changes on deploy).
+    location ~ ^/bundle\.[0-9a-f]{16}\.js$ {
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        expires 365d;
+    }
+    # Legacy un-hashed bundle fallback (force no-store if accidentally present)
+    location = /bundle.js {
+        add_header Cache-Control "no-store";
+        expires -1;
+    }
+    location = /env.js {
+        add_header Cache-Control "no-store";
+        expires -1;
+    }
 }
