fix: correct service account email and region in cloudbuild

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,12 +2,12 @@ options:
   substitutionOption: ALLOW_LOOSE
 
 substitutions:
-  _REGION: 'us-central1'
+  _REGION: 'europe-west6'
   _AR_REPO: 'family-weather-wardrobe-repo'
-  _FRONTEND_SERVICE: 'family-weather-wardrobe-frontend'
-  _BACKEND_SERVICE: 'family-weather-wardrobe-backend'
-  _DEPLOYER_SA_EMAIL: 'cloud-run-deployer-sa@${PROJECT_ID}.iam.gserviceaccount.com'
-  _CLOUD_RUN_SA: 'wardrobe-backend-sa@${PROJECT_ID}.iam.gserviceaccount.com'
+  _FRONTEND_SERVICE: 'frontend-service'
+  _BACKEND_SERVICE: 'backend-service'
+  _DEPLOYER_SA_EMAIL: 'cloud-run-deployer-sa@gen-lang-client-0325151027.iam.gserviceaccount.com'
+  _CLOUD_RUN_SA: 'wardrobe-backend-sa@gen-lang-client-0325151027.iam.gserviceaccount.com'
 
 steps:
   # Build backend image (parallel step 1)
