working simplified deployable code

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 # Backend Dockerfile
 FROM node:20-slim AS build
 WORKDIR /usr/src/app
-COPY backend/package.json backend/package-lock.json ./
+COPY package.json package-lock.json ./
 # Require lockfile for production builds to keep installs deterministic and fast.
 RUN if [ -f package-lock.json ]; then \
 			npm ci --production --no-audit --prefer-offline; \
@@ -9,7 +9,7 @@ RUN if [ -f package-lock.json ]; then \
 			echo "ERROR: backend/package-lock.json missing. Commit the lockfile to ensure deterministic builds." >&2; \
 			exit 1; \
 		fi
-COPY backend/ .
+COPY . .
 
 FROM node:20-slim AS runtime
 WORKDIR /usr/src/app
