--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview --port 3000",
     "build": "node build.mjs",
     "test": "jest --passWithNoTests",
-    "lint": "echo \"No linter configured\" && exit 0"
+    "lint": "echo \"No linter configured\" && exit 0",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@google/genai": "^1.28.0",
@@ -26,17 +28,18 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/supertest": "^2.0.12",
+    "@vitejs/plugin-react": "^4.0.0",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "esbuild": "^0.23.0",
     "eslint": "^8.56.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "typescript": "^5.9.3",
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^4.0.0"
+    "vite": "^7.2.4"
   }
 }
