--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.WEBSITE_DEPLOY_TOKEN }}
           publish_dir: ./dist
           cname: weather-appropriate-wardrobe.gaurav-desai.com
