--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "start": "vite",
     "preview": "vite preview --port 3000",
-    "build": "node build.mjs",
+    "build": "vite build",
+    "build:functions": "tsc -p functions/tsconfig.functions.json && cp functions/package.json functions/dist/package.json",
     "test": "jest --passWithNoTests",
     "lint": "echo \"No linter configured\" && exit 0",
     "predeploy": "npm run build",
@@ -19,25 +20,18 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@google-cloud/functions-framework": "^3.3.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/supertest": "^2.0.12",
     "@vitejs/plugin-react": "^4.0.0",
-    "cors": "^2.8.5",
-    "cross-fetch": "^3.1.5",
-    "esbuild": "^0.23.0",
     "eslint": "^8.56.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.4"
