--- a/functions/package.json
+++ b/functions/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p tsconfig.functions.json"
   },
   "dependencies": {
+    "@google-cloud/functions-framework": "^4.0.1",
     "@google/genai": "^1.28.0"
   }
 }
