--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "family-weather-wardrobe-functions",
   "version": "1.0.0",
   "private": true,
-  "main": "dist/suggestions.js",
+  "main": "dist/functions/suggestions.js",
   "type": "commonjs",
   "scripts": {
     "build": "tsc -p tsconfig.functions.json"
