--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,6 @@
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^4.0.1",
-    "@google/genai": "^1.28.0"
+    "@google-cloud/vertexai": "^1.9.0"
   }
 }
