--- a/config/functions.prod.yaml
+++ b/config/functions.prod.yaml
@@ -2,3 +2,4 @@ GEMINI_MODEL: "gemini-2.5-flash"
 GEMINI_MAX_RETRIES: "3"
 ALLOWED_ORIGINS: "https://weather-appropriate-wardrobe.gaurav-desai.com,https://gauravkdesai.github.io"
 USE_MOCK_GEMINI: "false"
+PROJECT_ID: "gen-lang-client-0325151027"
