--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.56.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.4"
